--- a/index.html
+++ b/index.html
@@ -24,23 +24,12 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#philosophy" class="nav-link">Mission</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
-                <a href="#offer" class="nav-link" style="color: var(--color-accent); font-weight: 600;">Offer Ends
-                    Jan 31</a>
                 <a href="https://noajpradio.substack.com/podcast" class="btn btn-primary desktop-only" target="_blank"
                     rel="noopener noreferrer">Start Listening</a>
             </div>
         </div>
     </nav>
 
-    <!-- Offer Banner -->
-    <div class="offer-banner">
-        <div class="container">
-            <a href="#offer">
-                <span>🎉 Exclusive 2026 Offer: Annual Plan 20% OFF</span>
-                <span class="offer-link-text">See Details →</span>
-            </a>
-        </div>
-    </div>
 
     <!-- Hero Section -->
     <section class="hero">
@@ -84,7 +73,7 @@
                     </button>
                     <button class="tab-btn" onclick="openTab(event, 'others-tab')">
                         <span class="tab-title">Others</span>
-                        <span class="tab-desc">Early access and exclusive offers.</span>
+                        <span class="tab-desc">Latest updates and limited content.</span>
                     </button>
                 </div>
 
@@ -113,9 +102,9 @@
 
                     <div id="others-tab" class="tab-pane">
                         <div style="font-size: 64px; margin-bottom: 24px;">✨</div>
-                        <h3>Exclusive Access</h3>
+                        <h3>Latest Updates</h3>
                         <p style="max-width: 400px; margin: 0 auto;">Be the first to know. Get early access to special
-                            content, new projects, and receive exclusive limited-time offers.</p>
+                            content, new projects, and receive latest updates.</p>
                     </div>
                 </div>
             </div>
@@ -193,10 +182,8 @@
                 <!-- Annual Plan -->
                 <div class="pricing-card featured">
                     <h3 class="pricing-title">Annual Plan</h3>
-                    <div class="pricing-badge">🎉 20% OFF - Ends Jan 31</div>
-                    <div class="pricing-original">$69.90/year</div>
-                    <div class="pricing-price">$55.92/year</div>
-                    <p style="color: var(--color-text-secondary); margin-bottom: var(--space-lg);">Approx. $4.66/month
+                    <div class="pricing-price">$69.90/year</div>
+                    <p style="color: var(--color-text-secondary); margin-bottom: var(--space-lg);">Approx. $5.83/month
                     </p>
 
                     <ul class="pricing-features">
@@ -208,61 +195,14 @@
                         <li class="text-highlight">Guaranteed event participation (no capacity limits)</li>
                     </ul>
 
-                    <a href="https://noajpradio.substack.com/learn_japanese_2026" class="btn btn-primary"
-                        target="_blank" rel="noopener noreferrer"
-                        style="width: 100%; margin-top: var(--space-lg);">Subscribe with 20% OFF</a>
+                    <a href="https://noajpradio.substack.com/subscribe" class="btn btn-primary" target="_blank"
+                        rel="noopener noreferrer" style="width: 100%; margin-top: var(--space-lg);">Start Annual
+                        Subscription</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Detailed Offer Section (Integrated from offer.html) -->
-    <section id="offer" class="section section-alt content-section" style="background-color: var(--color-surface);">
-        <div class="container-narrow">
-            <div style="text-align: center; margin-bottom: var(--space-xl);">
-                <h2 class="hero-title">Boost Your Japanese Learning in 2026</h2>
-                <div class="pricing-badge"
-                    style="display: inline-block; margin: var(--space-md) 0; padding: 8px 16px; font-size: 1.2rem;">
-                    Annual Plan 20% OFF</div>
-            </div>
-
-            <div class="section-text" style="margin-bottom: var(--space-2xl);">
-                <h3 style="margin-bottom: var(--space-lg); text-align: center;">Why does
-                    this offer exist?</h3>
-                <p>A new year is the perfect time to build new habits.</p>
-                <p>Many learners tell me the same thing:</p>
-                <blockquote
-                    style="border-left: 4px solid var(--color-divider); padding-left: var(--space-md); margin: var(--space-lg) 0; color: var(--color-text-secondary); font-style: italic;">
-                    "I'm studying Japanese, but I can't understand native speakers."<br>
-                    "Textbook Japanese feels different from actual conversation."<br>
-                    "I'm studying, but I don't feel like I'm improving."
-                </blockquote>
-                <p>That's why my podcast focuses on real Japanese spoken naturally, providing transcripts and vocabulary
-                    support.</p>
-
-                <p style="margin-top: var(--space-xl);"><strong>This offer is for learners who want to:</strong></p>
-                <ul style="list-style: none; padding: 0; display: inline-block; text-align: left; margin-top: var(--space-lg);"
-                    class="pricing-features">
-                    <li>Build comprehension faster</li>
-                    <li>Understand real spoken Japanese</li>
-                    <li>Learn useful vocabulary in context</li>
-                    <li>Keep listening consistently over months, not just days</li>
-                </ul>
-            </div>
-
-            <hr style="border: none; border-top: 1px solid var(--color-divider); margin: var(--space-2xl) 0;">
-
-            <div style="text-align: center;">
-
-                <div class="urgency-box"
-                    style="margin: var(--space-xl) auto; background: white; border: 1px solid var(--color-border); padding: var(--space-md); border-radius: var(--border-radius);">
-                    <p class="urgency-text" style="margin: 0;">⏰ This offer ends January 31, 2026 (JST)</p>
-                </div>
-                <a href="https://noajpradio.substack.com/learn_japanese_2026" class="btn btn-primary btn-lg"
-                    target="_blank" rel="noopener noreferrer">Subscribe now with 20% OFF</a>
-            </div>
-        </div>
-    </section>
 
 
 
