--- a/index_ja.html
+++ b/index_ja.html
@@ -24,7 +24,6 @@
                 <a href="#features" class="nav-link">機能</a>
                 <a href="#philosophy" class="nav-link">ミッション</a>
                 <a href="#pricing" class="nav-link">プラン</a>
-                <a href="#offer" class="nav-link" style="color: var(--color-accent); font-weight: 600;">1月31日に終了</a>
                 <a href="https://noajpradio.substack.com/podcast" class="btn btn-primary desktop-only" target="_blank"
                     rel="noopener noreferrer">Start Listening</a>
             </div>
@@ -46,15 +45,6 @@
         </div>
     </section>
 
-    <!-- Offer Banner -->
-    <div class="offer-banner">
-        <div class="offer-banner-content">
-            <p class="offer-banner-text">
-                🎉 <strong>2026年限定オファー：年間プラン20% OFF</strong>（1月31日まで）
-                <a href="#offer" class="offer-banner-link">詳細を見る →</a>
-            </p>
-        </div>
-    </div>
 
     <!-- Concept Section -->
     <section class="section content-section">
@@ -197,7 +187,7 @@
                     </button>
                     <button class="tab-btn" onclick="openTab(event, 'others-tab')">
                         <span class="tab-title">Others</span>
-                        <span class="tab-desc">先行アクセスや限定オファー。</span>
+                        <span class="tab-desc">最新情報や限定コンテンツ。</span>
                     </button>
                 </div>
 
@@ -226,9 +216,9 @@
 
                     <div id="others-tab" class="tab-pane">
                         <div style="font-size: 64px; margin-bottom: 24px;">✨</div>
-                        <h3>Exclusive Access</h3>
+                        <h3>Latest Updates</h3>
                         <p style="max-width: 400px; margin: 0 auto;">
-                            特別な情報をいち早く。限定コンテンツや新しいプロジェクトへの先行アクセス、期間限定の特別オファーを受け取れます。</p>
+                            特別な情報をいち早く。限定コンテンツや新しいプロジェクトへの先行アクセス、最新情報を受け取れます。</p>
                     </div>
                 </div>
             </div>
@@ -279,10 +269,8 @@
                 <!-- Annual Plan -->
                 <div class="pricing-card featured">
                     <h3 class="pricing-title">Annual Plan</h3>
-                    <div class="pricing-badge">🎉 20% OFF - 1月31日まで</div>
-                    <div class="pricing-original">$69.90/年</div>
-                    <div class="pricing-price">$55.92/年</div>
-                    <p style="color: var(--color-text-secondary); margin-bottom: var(--space-lg);">実質 $4.66/月</p>
+                    <div class="pricing-price">$69.90/年</div>
+                    <p style="color: var(--color-text-secondary); margin-bottom: var(--space-lg);">実質 $5.83/月</p>
 
                     <ul class="pricing-features">
                         <li>Freeプランのすべて</li>
@@ -293,61 +281,13 @@
                         <li class="text-highlight">人数制限なしでイベント等に参加可能（権利保証）</li>
                     </ul>
 
-                    <a href="https://noajpradio.substack.com/learn_japanese_2026" class="btn btn-primary"
-                        target="_blank" rel="noopener noreferrer" style="width: 100%; margin-top: var(--space-lg);">20%
-                        OFFで年間購読</a>
+                    <a href="https://noajpradio.substack.com/subscribe" class="btn btn-primary" target="_blank"
+                        rel="noopener noreferrer" style="width: 100%; margin-top: var(--space-lg);">年間購読で始める</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Detailed Offer Section (Integrated from offer.html) -->
-    <section id="offer" class="section section-alt content-section" style="background-color: var(--color-surface);">
-        <div class="container-narrow">
-            <div style="text-align: center; margin-bottom: var(--space-xl);">
-                <h2 class="hero-title">2026年、あなたの日本語学習をブーストさせる</h2>
-                <div class="pricing-badge"
-                    style="display: inline-block; margin: var(--space-md) 0; padding: 8px 16px; font-size: 1.2rem;">
-                    年間プラン 20% OFF</div>
-            </div>
-
-            <div class="section-text" style="margin-bottom: var(--space-2xl);">
-                <h3 style="margin-bottom: var(--space-lg); text-align: center;">
-                    なぜ、このオファーを届けるのか？</h3>
-                <p>新しい一年は、新しい習慣を身につけるのに最適な時期です。</p>
-                <p>多くの学習者から、同じような悩みを相談されます：</p>
-                <blockquote
-                    style="border-left: 4px solid var(--color-divider); padding-left: var(--space-md); margin: var(--space-lg) 0; color: var(--color-text-secondary); font-style: italic;">
-                    「日本語を勉強しているのに、ネイティブの話が聞き取れない」<br>
-                    「教科書の日本語と、実際の会話が違いすぎて戸惑う」<br>
-                    「勉強はしているけれど、上達している実感が持てない」
-                </blockquote>
-                <p>だからこそ、私のポッドキャストでは「自然に話される、生の日本語」に焦点を当て、書き起こしや単語ガイドでサポートしています。</p>
-
-                <p style="margin-top: var(--space-xl);"><strong>このオファーは、以下のような学習者のためのものです：</strong></p>
-                <ul style="list-style: none; padding: 0; display: inline-block; text-align: left; margin-top: var(--space-lg);"
-                    class="pricing-features">
-                    <li>理解のスピードが上がる</li>
-                    <li>生の日本語が聞き取れるようになる</li>
-                    <li>コンテキストの中で語彙を学べる</li>
-                    <li>三日坊主にならず、数ヶ月単位で継続できる</li>
-                </ul>
-            </div>
-
-            <hr style="border: none; border-top: 1px solid var(--color-divider); margin: var(--space-2xl) 0;">
-
-            <div style="text-align: center;">
-                <strong style="color: var(--color-text);">通常価格 $69.90/年 → <span class="text-highlight">限定価格
-                        $55.92/年</span></strong>
-                <div class="urgency-box"
-                    style="margin: var(--space-xl) auto; background: white; border: 1px solid var(--color-border); padding: var(--space-md); border-radius: var(--border-radius);">
-                    <p class="urgency-text" style="margin: 0;">⏰ このオファーは2026年1月31日（日本時間）に終了します</p>
-                </div>
-                <a href="https://noajpradio.substack.com/learn_japanese_2026" class="btn btn-primary btn-lg"
-                    target="_blank" rel="noopener noreferrer">20% OFFで今すぐ購読する</a>
-            </div>
-        </div>
-    </section>
     <section class="section section-alt content-section">
         <div class="container-narrow">
             <h2 class="section-title">こんな人におすすめ</h2>
